--- a/jenkins-brain.planx-pla.net/etlMapping.yaml
+++ b/jenkins-brain.planx-pla.net/etlMapping.yaml
@@ -1,183 +1,82 @@
 mappings:
-  - name: jenkins-brain.planx-pla.net_case
-    doc_type: case
+  - name: jenkins-brain.planx-pla.net_subject
+    doc_type: subject
     type: aggregator
-    root: case
+    root: subject
     props:
       - name: submitter_id
       - name: project_id
-      - name: gender
-      - name: ethnicity
-      - name: race
-      - name: age_at_enrollment
-      - name: experimental_group
+      - name: sex
+      - name: age_value
+      - name: ancestry
+      - name: disease_description
+      - name: phenotype_present
+      - name: phenotype_absent
+      - name: disease_id
+      - name: solve_state
+      - name: congenital_status
+      - name: age_of_onset
+      - name: phenotype_group
+      - name: anvil_project_id
+#    flatten_props:
     aggregated_props:
-      - name: education_years
-        path: demographics
-        src: education_years
-        fn: max
-      - name: age_at_onset
-        path: diagnoses
-        src: age_at_onset
-        fn: min
-      - name: mds_updrs
-        value_mappings:
-          - uploaded: MDS-UPDRS
-          - md5summed: MDS-UPDRS
-          - validating: MDS-UPDRS
-          - validated: MDS-UPDRS
-          - released: MDS-UPDRS
-        path: mds_unified_pd_ratings
-        src: state
+      - name: sample_provider
+        path: samples
+        src: sample_provider
         fn: set
-      - name: unified_parkinsons_disease_ratings
-        value_mappings:
-          - uploaded: UPDRS
-          - md5summed: UPDRS
-          - validating: UPDRS
-          - validated: UPDRS
-          - released: UPDRS
-        path: unified_parkinsons_disease_ratings
-        src: state
+      - name: tissue_affected_status
+        path: samples
+        src: tissue_affected_status
         fn: set
-      - name: hopkins_verbal_learning_tests
-        value_mappings:
-          - uploaded: HVLT-R
-          - md5summed: HVLT-R
-          - validating: HVLT-R
-          - validated: HVLT-R
-          - released: HVLT-R
-        path: hopkins_verbal_learning_tests
-        src: state
+      - name: tissue_type
+        path: samples
+        src: tissue_type
         fn: set
-      - name: scales_for_outcomes_in_pds
-        value_mappings:
-          - uploaded: Scales for Outcomes in Parkinson’s Disease - Autonomic
-          - md5summed: Scales for Outcomes in Parkinson’s Disease - Autonomic
-          - validating: Scales for Outcomes in Parkinson’s Disease - Autonomic
-          - validated: Scales for Outcomes in Parkinson’s Disease - Autonomic
-          - released: Scales for Outcomes in Parkinson’s Disease - Autonomic
-        path: scales_for_outcomes_in_pds
-        src: state
+      - name: sample_type
+        path: samples
+        src: sample_type
         fn: set
-      - name: modified_schwab_england_scales
-        value_mappings:
-          - uploaded: Modified Schwab
-          - md5summed: Modified Schwab
-          - validating: Modified Schwab
-          - validated: Modified Schwab
-          - released: Modified Schwab
-        path: modified_schwab_england_scales
-        src: state
+      - name: original_material_type
+        path: samples
+        src: original_material_type
         fn: set
-      - name: baseline_dyspnea_indexes
-        value_mappings:
-          - uploaded: BDI
-          - md5summed: BDI
-          - validating: BDI
-          - validated: BDI
-          - released: BDI
-        path: baseline_dyspnea_indexes
-        src: state
+      - name: exome_capture_platform
+        path: samples.sequencings
+        src: exome_capture_platform
         fn: set
-      - name: hamilton_depression_ratings
-        value_mappings:
-          - uploaded: Hamilton
-          - md5summed: Hamilton
-          - validating: Hamilton
-          - validated: Hamilton
-          - released: Hamilton
-        path: hamilton_depression_ratings
-        src: state
+      - name: library_prep_kit_method
+        path: samples.sequencings
+        src: library_prep_kit_method
         fn: set
-      - name: state_trait_anxiety_inventories
-        value_mappings:
-          - uploaded: Anxiety – State-Trait Anxiety Inventory (STAI)
-          - md5summed: Anxiety – State-Trait Anxiety Inventory (STAI)
-          - validating: Anxiety – State-Trait Anxiety Inventory (STAI)
-          - validated: Anxiety – State-Trait Anxiety Inventory (STAI)
-          - released: Anxiety – State-Trait Anxiety Inventory (STAI)
-        path: state_trait_anxiety_inventories
-        src: state
+      - name: capture_region_bed_file
+        path: samples.sequencings
+        src: capture_region_bed_file
         fn: set
-      - name: upenn_smell_tests
-        value_mappings:
-          - uploaded: UPSIT
-          - md5summed: UPSIT
-          - validating: UPSIT
-          - validated: UPSIT
-          - released: UPSIT
-        path: upenn_smell_tests
-        src: state
+      - name: reference_genome_build
+        path: samples.sequencings
+        src: reference_genome_build
         fn: set
-      - name: geriatric_depression_scales
-        value_mappings:
-          - uploaded: Geriatric Depression Scale Short Form Questionnaire
-          - md5summed: Geriatric Depression Scale Short Form Questionnaire
-          - validating: Geriatric Depression Scale Short Form Questionnaire
-          - validated: Geriatric Depression Scale Short Form Questionnaire
-          - released: Geriatric Depression Scale Short Form Questionnaire
-        path: geriatric_depression_scales
-        src: state
+      - name: sequencing_assay
+        path: samples.sequencings
+        src: sequencing_assay
         fn: set
-      - name: montreal_cognitive_functional_tests
-        value_mappings:
-          - uploaded: MOCA
-          - md5summed: MOCA
-          - validating: MOCA
-          - validated: MOCA
-          - released: MOCA
-        path: montreal_cognitive_functional_tests
-        src: state
+      - name: alignment_method
+        path: samples.sequencings
+        src: alignment_method
         fn: set
-      - name: mini_mental_status_exams
-        value_mappings:
-          - uploaded: MMSE
-          - md5summed: MMSE
-          - validating: MMSE
-          - validated: MMSE
-          - released: MMSE
-        path: mini_mental_status_exams
-        src: state
-        fn: set
-      - name: rem_sleep_behaviors
-        value_mappings:
-          - uploaded: REM Sleep Behavior Disorder Questionnaire
-          - md5summed: REM Sleep Behavior Disorder Questionnaire
-          - validating: REM Sleep Behavior Disorder Questionnaire
-          - validated: REM Sleep Behavior Disorder Questionnaire
-          - released: REM Sleep Behavior Disorder Questionnaire
-        path: rem_sleep_behaviors
-        src: state
-        fn: set
-      - name: epworth_sleepiness_scales
-        value_mappings:
-          - uploaded: Epworth Sleepiness Scale
-          - md5summed: Epworth Sleepiness Scale
-          - validating: Epworth Sleepiness Scale
-          - validated: Epworth Sleepiness Scale
-          - released: Epworth Sleepiness Scale
-        path: epworth_sleepiness_scales
-        src: state
+      - name: data_processing_pipeline
+        path: samples.sequencings
+        src: data_processing_pipeline
         fn: set
       - name: _samples_count
         path: samples
         fn: count
-      - name: _aliquots_count
-        path: samples.aliquots
-        fn: count
-      - name: _read_group_count
-        path: samples.aliquots.read_groups
-        fn: count
-      - name: _submitted_expression_arrays_count
-        path: samples.aliquots.submitted_expression_array_files
-        fn: count
-      - name: _submitted_unaligned_reads_count
-        path: samples.aliquots.read_groups.submitted_unaligned_reads_files
+      - name: _sequencings_count
+        path: samples.sequencings
         fn: count
     joining_props:
       - index: file
-        join_on: _case_id
+        join_on: _subject_id
         props:
           - name: data_format
             src: data_format
@@ -185,12 +84,27 @@ mappings:
           - name: data_type
             src: data_type
             fn: set
+          - name: data_category
+            src: data_category
+            fn: set
+          - name: file_count
+            src: _file_id
+            fn: count
+    parent_props:
+      - path: projects[project_code:code]
+      - path: projects[project_name:name]
+      - path: projects[project_dbgap_phs:dbgap_phs]
+      - path: projects[project_dbgap_consent_text:dbgap_consent_text]
+      - path: projects[project_short_name:short_name]
+      - path: projects[project_dbgap_accession_number:dbgap_accession_number]
   - name: jenkins-brain.planx-pla.net_file
     doc_type: file
     type: collector
     root: None
     category: data_file
     props:
+      - name: project_id
+      - name: submitter_id
       - name: object_id
       - name: md5sum
       - name: file_name
@@ -198,11 +112,52 @@ mappings:
       - name: data_format
       - name: data_type
       - name: state
+      - name: data_category
+      - name: analyte_type
+      - name: sequencing_assay
+      - name: source_node
     injecting_props:
-      case:
+      subject:
         props:
-          - name: _case_id
+          - name: _subject_id
             src: id
             fn: set
-          - name: project_id
+          - name: subject_submitter_id
+            src: submitter_id
+            fn: set
+          - name: anvil_project_id
+            src: anvil_project_id
+            fn: set
+          - name: sex
+            src: sex
+            fn: set
+          - name: age_value
+            src: age_value
+            fn: set
+          - name: ancestry
+            src: ancestry
+            fn: set
+          - name: disease_description
+            src: disease_description
+            fn: set
+          - name: phenotype_present
+            src: phenotype_present
+            fn: set
+          - name: phenotype_absent
+            src: phenotype_absent
+            fn: set
+          - name: disease_id
+            src: disease_id
+            fn: set
+          - name: solve_state
+            src: solve_state
+            fn: set
+          - name: congenital_status
+            src: congenital_status
+            fn: set
+          - name: age_of_onset
+            src: age_of_onset
+            fn: set
+          - name: phenotype_group
+            src: phenotype_group
             fn: set
